Classfile API Testing.